--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitness club</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="logo.js"></script>
+    <script src="dialog.js"></script>
 
     <style>
       tr a {
@@ -44,7 +46,12 @@
   >
     <header>
       <div class="container-head">
-        <img src="logo.png" alt="Energia Fitness Logo" class="logo" />
+        <img
+          src="logo.png"
+          alt="Energia Fitness Logo"
+          class="logo"
+          onclick="showDeveloperInfo('Березка', 'Ірина')"
+        />
 
         <div class="info">
           <div class="phone-icon">
