--- a/prices.html
+++ b/prices.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ІС-31 Березка Ірина</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="compare.js"></script>
   </head>
   <body>
     <header>
@@ -83,7 +84,7 @@
                 <p class="money">900 грн</p>
               </td>
               <td class="card">
-                <h3>Абонемент на фітнес напрямки</h3>
+                <h3 id="check1">Абонемент на фітнес напрямки</h3>
                 <p class="info-price">
                   К-сть занять: 8<br />Термін придатності: <br />1 місяць
                 </p>
@@ -107,7 +108,7 @@
               </td>
               <td class="card">
                 <h3 class="title-price2">Сеанс масажу 1 година</h3>
-                <p>*вид масажу на виибір</p>
+                <p id="check2">*вид масажу на виибір</p>
                 <p class="money">600 грн</p>
               </td>
             </tr>
@@ -117,7 +118,7 @@
     </main>
     <footer>
       <div class="container">
-        <p>&copy; 2024 Energia Fitness</p>
+        <p>&copy; 2025 Energia Fitness</p>
       </div>
     </footer>
   </body>
