--- a/review.html
+++ b/review.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ІС-31 Березка Ірина</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="comments.js"></script>
   </head>
   <body>
     <header>
@@ -126,7 +127,7 @@
     </main>
     <footer>
       <div class="container">
-        <p>&copy; 2024 Energia Fitness</p>
+        <p>&copy; 2025 Energia Fitness</p>
       </div>
     </footer>
   </body>
