--- a/schedules.html
+++ b/schedules.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ІС-31 Березка Ірина</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="dom-tasks.js"></script>
 
     <style>
       body {
