--- a/review.html
+++ b/review.html
@@ -101,7 +101,8 @@
           </div>
         </div>
       </section>
-      <form class="form-container">
+      <button type="button" data-toggle-id="formContainer">Показати/Приховати форму</button>
+      <form class="form-container" id="formContainer">
         <input
           type="text"
           id="name"
